--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,10 @@ head.center {
     width: 50%;
   }
 
-div {
-    width: 100%;
-    height: 200px;
-    background-image: url('https://external-preview.redd.it/LIB7fgP5g9c5cY7UNNN9_E1HNfOY1GFnSfjjfC8ZmF8.jpg?auto=webp&s=5b96ab70dcda1f4619a2641b1ffe2516c4a3c100');
-    background-size: 100% 100%;
-    border: 1px solid red;
-}
  img.class {
      display:block;
      margin-left: auto;
      margin-right:auto;
  }
+
+ h1, h2, h3, h4 { font-family: MedievalSharp; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: MedievalSharp; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: MedievalSharp; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: MedievalSharp; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: MedievalSharp; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
